--- a/less/common.less
+++ b/less/common.less
@@ -41,3 +41,23 @@ div {
     text-align: center;
   }
 }
+
+div.cf7md-item {
+  text-align: left;
+}
+
+div#cf7md-form
+  {
+    input[type="date"] {
+      height: 50px;
+      font-size: 16px;
+      background-color: whitesmoke;
+      border-top: none;
+      border-left: none;
+    }
+
+    .mdc-layout-grid__inner > p:not(.mdc-layout-grid__cell),
+    div.cf7md-item {
+      text-align: left;
+    }
+  }
